# dicom-ups-rs-client

./: .gitignore  README.md  pyproject.toml  setup_py.py
dicom_ups_rs_client/: __init__.py  ups_rs_client.py
tests/: conftest.py  test_async_operations.py  test_client_initialization.py  test_core_operations.py  test_error_handling.py  test_integration_scenarios.py  test_ssl_functionality.py  test_subscription_management.py  test_utils.py  test_websocket.py
